--- a/problem.html
+++ b/problem.html
@@ -66,7 +66,7 @@
 
                 <div class="twoColumns">
                   <div class="twoColumns-left">
-                  <img src="images/goal.png" alt="Goal number 3" width="300" height="auto">
+                  <img src="images/goal_3.png" alt="Goal number 3" width="300" height="auto">
                 </div>
                 <div class="twoColumns-right">
                   <h2>Ensure healthy lives and promote well being for all
