--- a/resources.html
+++ b/resources.html
@@ -24,17 +24,32 @@
       <a href="prototype.html">Prototype</a>
     </nav>
     <div id="sources" class="main">
-      <h1>All resources:</h1>
-      <h2>Sources of content:</h2>
+      <h1>List of References</h1>
+      <h2>References of content:</h2>
       <ol>
         <li id="UN-goals"><a href="https://www.un.org/sustainabledevelopment/sustainable-development-goals/">UNs sustainable developement goals</a>- 05.11.2020</li>
         <li id="UN-3"> <a href="https://www.un.org/sustainabledevelopment/health/">UNs goal nr. 3, Good health and well being</a>- 05.11.2020</li>
         <li id="WHO-COVID19"> <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/advice-for-public">WHO, Protect yourself and others from COVID-19</a>- 09.11.2020</li>
       </ol>
       <br><br>
-      <h2>Sources of assets:</h2>
+      <h2>Refrences of images</h2>
       <ol>
-        <li><a href="https://unsplash.com/photos/JqWanio3sZo">Distancing image on front page</a>- 11.11.2020</li>
+        <li><a href="https://stock.adobe.com/search?filters%5Bcontent_type%3Aphoto%5D=1&filters%5Bcontent_type%3Aillustration%5D=1&filters%5Bcontent_type%3Azip_vector%5D=1&filters%5Bcontent_type%3Avideo%5D=1&filters%5Bcontent_type%3Atemplate%5D=1&filters%5Bcontent_type%3A3d%5D=1&filters%5Bcontent_type%3Aimage%5D=1&order=relevance&safe_search=1&limit=100&search_page=1&k=social+distance&search_type=usertyped&acp=&aco=social+distance&get_facets=0&asset_id=330511344">Distancing image on front page</a>
+        <br><br> Image preview:
+        <br><img src="images/forsidebilde.png" alt"" width="100" height="auto">
+        <br><br> Artist: Nuthawut
+        <br><br> Date accessed: 17/11/2020
+        <br><br> The original picture has been altered by removing the background in Adobe PS <br><br>
+      </li>
+
+
+        <li><a href="https://pixabay.com/illustrations/coronavirus-line-art-virus-5019475"> Illustration on Challenge Site <img scr="images/link.png" alt ="link"> </a>
+        <br><br> Image preview:
+        <br> <img src="images/distance.png" alt="" width="100" height="auto">
+        <br><br> Artist: Annalisa Batista
+        <br><br> Date accessed: 17/11/2020
+
+      </li>
       </ol>
     </div>
     <!--<input id="cssChange" type="checkbox" name="CSS" value="" onchange="changeCSS()">-->
