--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class="section-container">
             <div class="section-content"><br>
               <h2>Solution</h2><br>
-              <p>Our app is designed to make social distancing easier.
+              <p>Our service is designed to make social distancing easier.
                 HowCrowded shows you the optimal times to visit malls, stores
                 and other places to keep a safe distance to others, in order to reduce the spread of COVID-19.</p>
                 <br><br>
