--- a/resources.html
+++ b/resources.html
@@ -27,14 +27,23 @@
       <h1>List of References</h1>
       <h2>References of content:</h2>
       <ol>
-        <li id="UN-goals"><a href="https://www.un.org/sustainabledevelopment/sustainable-development-goals/">UNs sustainable developement goals</a>- 05.11.2020</li>
-        <li id="UN-3"> <a href="https://www.un.org/sustainabledevelopment/health/">UNs goal nr. 3, Good health and well being</a>- 05.11.2020</li>
-        <li id="WHO-COVID19"> <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/advice-for-public">WHO, Protect yourself and others from COVID-19</a>- 09.11.2020</li>
+        <li id="UN-goals"><a href="https://www.un.org/sustainabledevelopment/sustainable-development-goals/" target="_blank">United Nations<img src="images/link.png" alt="link" width="15" height="auto"></a>
+        <br><br> Title of page:"Sustainable Development Goals"
+        <br><br> Date accessed: 05/11/2020
+        </li>
+        <li id="UN-3"> <a href="https://www.un.org/sustainabledevelopment/health/" target="_blank">United Nations<img src="images/link.png" alt="link" width="15" height="auto"></a>
+          <br><br> Title of page: "Goal 3: Ensure healthy lives and promote well-being for all images"
+          <br><br> Date accessed: 05/11/2020
+        </li>
+        <li id="WHO-COVID19"> <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/advice-for-public" target="_blank">World Health Organization<img src="images/link.png" alt="link" width="15" height="auto"></a>
+          <br><br> Title of page: "Coronavirus disease advice for the public"
+          <br><br> Date accessed: 09/11/2020
+        </li>
       </ol>
       <br><br>
-      <h2>Refrences of images</h2>
+      <h2>References of images:</h2>
       <ol>
-        <li><a href="https://stock.adobe.com/search?filters%5Bcontent_type%3Aphoto%5D=1&filters%5Bcontent_type%3Aillustration%5D=1&filters%5Bcontent_type%3Azip_vector%5D=1&filters%5Bcontent_type%3Avideo%5D=1&filters%5Bcontent_type%3Atemplate%5D=1&filters%5Bcontent_type%3A3d%5D=1&filters%5Bcontent_type%3Aimage%5D=1&order=relevance&safe_search=1&limit=100&search_page=1&k=social+distance&search_type=usertyped&acp=&aco=social+distance&get_facets=0&asset_id=330511344">Distancing image on front page</a>
+        <li><a href="https://stock.adobe.com/search?filters%5Bcontent_type%3Aphoto%5D=1&filters%5Bcontent_type%3Aillustration%5D=1&filters%5Bcontent_type%3Azip_vector%5D=1&filters%5Bcontent_type%3Avideo%5D=1&filters%5Bcontent_type%3Atemplate%5D=1&filters%5Bcontent_type%3A3d%5D=1&filters%5Bcontent_type%3Aimage%5D=1&order=relevance&safe_search=1&limit=100&search_page=1&k=social+distance&search_type=usertyped&acp=&aco=social+distance&get_facets=0&asset_id=330511344" target="_blank">Distancing image on front page <img src="images/link.png" alt="link" width="15" height="auto"></a>
         <br><br> Image preview:
         <br><img src="images/forsidebilde.png" alt"" width="100" height="auto">
         <br><br> Artist: Nuthawut
@@ -43,7 +52,7 @@
       </li>
 
 
-        <li><a href="https://pixabay.com/illustrations/coronavirus-line-art-virus-5019475"> Illustration on Challenge Site <img scr="images/link.png" alt ="link"> </a>
+        <li><a href="https://pixabay.com/illustrations/coronavirus-line-art-virus-5019475" target="_blank"> Illustration on Challenge Site   <img src="images/link.png" alt="link" width="15" height="auto"></a>
         <br><br> Image preview:
         <br> <img src="images/distance.png" alt="" width="100" height="auto">
         <br><br> Artist: Annalisa Batista
