--- a/problem.html
+++ b/problem.html
@@ -9,7 +9,7 @@
 <body>
   <div class="content">
     <nav id="navbar">
-      <a href="index.html"><img src="images\logo.PNG" /></a>
+      <a href="index.html"><img src="images\logo.PNG" alt="Logo"></a>
       <a href="problem.html">Challenge</a>
       <a href="solution.html">Solution</a>
       <a href="prototype.html">Prototype</a>
@@ -41,13 +41,13 @@
               store or a gym.</p><br>
             </div>
             <div class="flex-challenge-right">
-              <img src="images/distance.png" alt="" width="500" height="auto">
+              <img src="images/distance.png" alt="Measures to prevent Covid-19" width="500" height="auto">
             </div>
           </div>
 
           <div class="flex-pro darkDiv">
             <div class="flex-leftpro">
-              <img src="images/maximum.png" alt="" width="470" height="auto">
+              <img src="images/maximum.png" alt="Sign showing how many people are allowed inside a store" width="470" height="auto">
             </div>
             <div class="flex-rightpro">
               <h2 class="problem-text">The challenge illustrated</h2>
@@ -81,7 +81,7 @@
                       spending on health systems.</p>
                 </div>
                 <div class="twoColumns-right">
-                  <img src="images/goal_3.png" alt="Goal number 3" width="300" height="auto">
+                  <img src="images/goal_3.png" alt="UN Goal number 3" width="300" height="auto">
                   </div>
                 </div>
                 </div>
