--- a/solution.html
+++ b/solution.html
@@ -9,7 +9,7 @@
 <body>
   <div class="content">
     <nav id="navbar">
-      <a href="index.html"><img src="images\logo.PNG" /></a>
+      <a href="index.html"><img src="images\logo.PNG" alt="Logo"></a>
       <a href="problem.html">Challenge</a>
       <a href="solution.html">Solution</a>
       <a href="prototype.html">Prototype</a>
@@ -17,7 +17,7 @@
     <div class="main">
       <div class="topflex-sol">
         <div class="topflex-solleft">
-          <img src="images/keepdistance.png" alt="" width="600" heigth="auto">
+          <img src="images/keepdistance.png" alt="Illustration of people keeping distance" width="600" heigth="auto">
         </div>
         <div class="topflex-solright">
           <p>Keep distance<br>to care<br>for each other</p>
@@ -48,7 +48,7 @@
 
             <div class="flex-so">
               <div class="flex-leftso darkDiv">
-                <img src="images/consumer.png" alt="consumer" width="auto" height="70">
+                <img src="images/consumer.png" alt="Consumer icon" width="auto" height="70">
                 <p class="solution-heading">Consumer</p>
                 <p class="solution-text-white"> This will make it much easier for people to plan their trips to public
                   indoor spaces as they can both check in real-time how many people there are and
@@ -56,7 +56,7 @@
                 </div>
 
                 <div class="flex-rightso darkDiv">
-                  <img src="images/business.png" alt="organization" width="auto" height="70">
+                  <img src="images/business.png" alt="Organization icon" width="auto" height="70">
                   <p class="solution-heading"> Organization
                   </p>
                   <p class="solution-text-white"> For organizations and businesses, they no longer have to manually count
