--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="content">
     <nav id="navbar">
-      <a href="index.html"><img src="images\logo.PNG" /></a>
+      <a href="index.html"><img src="images\logo.PNG" alt="Logo"></a>
       <a href="problem.html">Challenge</a>
       <a href="solution.html">Solution</a>
       <a href="prototype.html">Prototype</a>
