--- a/prototype.html
+++ b/prototype.html
@@ -9,7 +9,7 @@
 <body>
   <div class="content">
     <nav id="navbar">
-      <a href="index.html"><img src="images\logo.PNG" /></a>
+      <a href="index.html"><img src="images\logo.PNG" alt="Logo"></a>
       <a href="problem.html">Challenge</a>
       <a href="solution.html">Solution</a>
       <a href="prototype.html">Prototype</a>
@@ -20,7 +20,7 @@
   <main>
     <div class="divices">
             <div class="divices_img">
-                <img src="images/prototype/Bilde2.png" title="">
+                <img src="images/prototype/Bilde2.png" alt="">
             </div>
             <h1 class="divices_txt">
                 The HowCrowded provides a dual solution for people and organizations to make social distancing a breeze.<br>
