--- a/problem.html
+++ b/problem.html
@@ -27,10 +27,10 @@
               Today’s global pandemic has taught us many things.
               For instance, it's made us more aware to wash our hands, and perhaps
               most importantly, it's learned us the importance of practicing social distancing.
-              WHO (n.d.) states that to keep yourself and others
+              WHO states that to keep yourself and others
               safe from COVID-19, it’s important to keep a distance
               of at least one meter from others, and an even greater
-              distance indoors; the further away, the better.
+              distance indoors; the further away, the better<a href="resources.html">(reference 3)</a>.
               However, in some situations, it's hard maintaining
               distance to other people. Doing necessary chores, such
               as going to the grocery store, can make it difficult to keep
@@ -69,16 +69,16 @@
                     <h2>Ensure healthy lives and promote well being for all
                       at all ages</h2>
                     <p>HowCrowded’s work is inspired by the UN’s sustainable goal number 3:
-                      <br><b><i>Ensuring healthy lives and promote well-being for all at all ages.</i></b><br>
+                      <br><b><i>Ensuring healthy lives and promote well-being for all at all ages.<a href="resources.html">(reference 1)</a></i></b><br>
                       The UN reports that the implications from the pandemic could potentially
                       set back decades of improvement in healthcare and they are expecting hundred
-                      of thousands additional under-5 deaths (UN, n.d.).
+                      of thousands additional under-5 deaths<a href="resources.html">(reference 2)</a>.
                       Already, childhood immunization programmes in around 70 countries have been
-                      interrupted (UN, n.d.). With other words, the pandemic is  threatening
+                      interrupted<a href="resources.html">(reference 2)</a>. With other words, the pandemic is  threatening
                       the health outcomes and could cause massive setbacks to the overall health
                       services provided in the world.
-                      The UN(n.d.) calls out for comprehensive health strategies and increased
-                      spending on health systems.</p>
+                      The UN calls out for comprehensive health strategies and increased
+                      spending on health systems<a href="resources.html">(reference 2)</a>.</p>
                 </div>
                 <div class="twoColumns-right">
                   <img src="images/goal_3.png" alt="Goal number 3" width="300" height="auto">
