--- a/resources.html
+++ b/resources.html
@@ -43,22 +43,93 @@
       <br><br>
       <h2>References of images:</h2>
       <ol>
-        <li><a href="https://stock.adobe.com/search?filters%5Bcontent_type%3Aphoto%5D=1&filters%5Bcontent_type%3Aillustration%5D=1&filters%5Bcontent_type%3Azip_vector%5D=1&filters%5Bcontent_type%3Avideo%5D=1&filters%5Bcontent_type%3Atemplate%5D=1&filters%5Bcontent_type%3A3d%5D=1&filters%5Bcontent_type%3Aimage%5D=1&order=relevance&safe_search=1&limit=100&search_page=1&k=social+distance&search_type=usertyped&acp=&aco=social+distance&get_facets=0&asset_id=330511344" target="_blank">Distancing image on front page <img src="images/link.png" alt="link" width="15" height="auto"></a>
+        <li><a href="https://stock.adobe.com/no/images/social-distancing-keep-distance-in-public-society-people-to-protect-from-covid-19-coronavirus-outbreak-spreading-concept-businessman-and-woman-keep-distance-away-in-the-meeting-with-virus-pathogens/330511344?prev_url=detail" target="_blank">Distancing image on front page <img src="images/link.png" alt="link" width="15" height="auto"></a>
         <br><br> Image preview:
         <br><img src="images/forsidebilde.png" alt"" width="100" height="auto">
         <br><br> Artist: Nuthawut
         <br><br> Date accessed: 17/11/2020
-        <br><br> The original picture has been altered by removing the background in Adobe PS <br><br>
-      </li>
+        <br><br> The original picture has been altered by removing the background in Adobe PS
+        <br><br> Used with licence <br><br>
+    </li>
 
+      <li><a href="?" target="_blank">Crowd Image on Front Page <img src="images/link.png" alt="link" width="15" height="auto"></a>
+      <br><br> Image preview:
+      <br><img src="images/crowd.png" alt"" width="100" height="auto">
+      <br><br> Artist: ?
+      <br><br> Date accessed: ?
+    </li>
 
-        <li><a href="https://pixabay.com/illustrations/coronavirus-line-art-virus-5019475" target="_blank"> Illustration on Challenge Site   <img src="images/link.png" alt="link" width="15" height="auto"></a>
+    <li><a href="?" target="_blank"> Arrow Image on Front Page  <img src="images/link.png" alt="link" width="15" height="auto"></a>
+    <br><br> Image preview:
+    <br> <img src="images/arrow-down.png" alt="" width="100" height="auto">
+    <br><br> Artist: ?
+    <br><br> Date accessed: ?
+  </li>
+
+  <li><a href="https://www.un.org/sustainabledevelopment/health/" target="_blank"> UN goal 3 on Front Page and Challenge Page  <img src="images/link.png" alt="link" width="15" height="auto"></a>
+  <br><br> Image preview:
+  <br> <img src="images/goal_3.png" alt="" width="100" height="auto">
+  <br><br> Organization: UN
+  <br><br> Date accessed: 17/11/2020
+  <br><br> Image has been altred in Adobe Photoshop chaning color and removing backround<br><br>
+</li>
+
+        <li><a href="https://pixabay.com/illustrations/coronavirus-line-art-virus-5019475" target="_blank"> Covid Measures on Challenge Site   <img src="images/link.png" alt="link" width="15" height="auto"></a>
         <br><br> Image preview:
-        <br> <img src="images/distance.png" alt="" width="100" height="auto">
+        <br> <img src="images/distance.png" alt="covid measures" width="100" height="auto">
         <br><br> Artist: Annalisa Batista
-        <br><br> Date accessed: 17/11/2020
-
+        <br><br> Date accessed: 17/11/2020<br><br>
       </li>
+
+      <li><a href="https://pixabay.com/no/illustrations/butikk-bygninger-city-arkitektur-5052229/" target="_blank"> House illustration on Challenge Site   <img src="images/link.png" alt="link" width="15" height="auto"></a>
+      <br><br> Image preview:
+      <br> <img src="images/maximum.png" alt="" width="100" height="auto">
+      <br><br> Artist: Stephanie Curry
+      <br><br> Date accessed: 17/11/2020
+      <br><br> Image has been altered in Adobe Photoshop cropping and adding text<br><br>
+    </li>
+
+    <li><a href="https://pixabay.com/vectors/covid-19-coronavirus-virus-5224053/" target="_blank"> Distancing Illustration on Solution Site   <img src="images/link.png" alt="link" width="15" height="auto"></a>
+    <br><br> Image preview:
+    <br> <img src="images/keepdistance.png" alt="distancing illustration" width="100" height="auto">
+    <br><br> Artist: Cromaconeptovisual
+    <br><br> Date accessed: 17/11/2020
+    <br><br> Image has been altered in Adobe Illustator removing background<br><br>
+  </li>
+
+  <li><a href="https://img.icons8.com/dotty/80/000000/person-male.png" target="_blank"> Person Icon on Soultion Site  <img src="images/link.png" alt="link" width="15" height="auto"></a>
+  <br><br> Image preview:
+  <br> <img src="images/consumer.png" alt="person icon" width="100" height="auto">
+  <br><br> Artist: unknown
+  <br><br> Date accessed: 10/11/2020
+  <br><br> Image has been altered in Adobe Photoshop from black to white<br><br>
+  </li>
+
+    <li><a href="https://img.icons8.com/ios/50/000000/company.png" target="_blank"> Company Icon on Soultion Site  <img src="images/link.png" alt="link" width="15" height="auto"></a>
+    <br><br> Image preview:
+    <br> <img src="images/business.png" alt="company icon" width="100" height="auto">
+    <br><br> Artist: unknown
+    <br><br> Date accessed: 10/11/2020
+    <br><br> Image has been altered in Adobe Photoshop from black to white<br><br>
+    </li>
+
+    <li><a href="https://stock.adobe.com/no/images/motion-sensor-icon-walking-man/217847955?prev_url=detail" target="_blank"> Sensor Illustation on Prototype Site  <img src="images/link.png" alt="link" width="15" height="auto"></a>
+    <br><br> Image preview:
+    <br> <img src="images/prototype/sensor.png" alt="sensor illustration" width="100" height="auto">
+    <br><br> Artist: Janis Abolins
+    <br><br> Date accessed: 27/12/2020
+    <br><br> Used with licence
+    <br><br>
+    </li>
+
+    <li><a href="https://stock.adobe.com/no/images/motion-sensor-icon-walking-man/217847955?prev_url=detail" target="_blank"> Link Icon on References Site  <img src="images/link.png" alt="link" width="15" height="auto"></a>
+    <br><br> Image preview:
+    <br> <img src="images/link.png" alt="link icon" width="100" height="auto">
+    <br><br> Artist: unknown
+    <br><br> Date accessed: 27/12/2020
+    <br><br> Image has been altered in Adobe Photoshop from black to white<br><br>
+    </li>
+
       </ol>
     </div>
     <!--<input id="cssChange" type="checkbox" name="CSS" value="" onchange="changeCSS()">-->
