--- a/resources.html
+++ b/resources.html
@@ -43,6 +43,16 @@
       <br><br>
       <h2>References of images:</h2>
       <ol>
+
+        <li> <b> Logo </b>
+        <br><br> Image preview:
+        <br><img src="images/HCicon.png" alt"logo" width="100" height="auto">
+        <br><br> The logo is a composite image created in ??????
+        <br><br> Link til icon hvis du ikke har laget selv?
+
+    </li>
+
+
         <li><a href="https://stock.adobe.com/no/images/social-distancing-keep-distance-in-public-society-people-to-protect-from-covid-19-coronavirus-outbreak-spreading-concept-businessman-and-woman-keep-distance-away-in-the-meeting-with-virus-pathogens/330511344?prev_url=detail" target="_blank">Distancing image on front page <img src="images/link.png" alt="link" width="15" height="auto"></a>
         <br><br> Image preview:
         <br><img src="images/forsidebilde.png" alt"" width="100" height="auto">
@@ -121,6 +131,14 @@
     <br><br> Used with licence
     <br><br>
     </li>
+
+    <li> <b> Prototype Illustations on Prototype Page </b>
+    <br><br> Image preview:
+    <br><img src="images/prototype/Bilde2.png" alt"logo" width="100" height="auto">
+    <br><br> The prototype is a composite image created in ??????
+    <br><br> Link til icon hvis du ikke har laget selv? <br><br>
+
+</li>
 
     <li><a href="https://stock.adobe.com/no/images/motion-sensor-icon-walking-man/217847955?prev_url=detail" target="_blank"> Link Icon on References Site  <img src="images/link.png" alt="link" width="15" height="auto"></a>
     <br><br> Image preview:
