--- a/resources.html
+++ b/resources.html
@@ -81,7 +81,7 @@
   <br> <img src="images/goal_3.png" alt="" width="100" height="auto">
   <br><br> Organization: UN
   <br><br> Date accessed: 17/11/2020
-  <br><br> Image has been altred in Adobe Photoshop chaning color and removing backround<br><br>
+  <br><br> Image has been altred in Adobe Photoshop change color and removing backround<br><br>
 </li>
 
         <li><a href="https://pixabay.com/illustrations/coronavirus-line-art-virus-5019475" target="_blank"> Covid Measures on Challenge Site   <img src="images/link.png" alt="link" width="15" height="auto"></a>
