--- a/solution.html
+++ b/solution.html
@@ -82,20 +82,17 @@
               </div>
 
 
-              <footer id="footer">
-                <h2>Made by:</h2>
-                <div class="fContent">
-                  <a id="resources" href="resources.html">Our resources</a>
-                  <img src="images/HCicon.png"/>
-                  <div id="contributors">
-                    <h5 class="contributor">Ole</h5>
-                    <h5 class="contributor">Zandra</h5>
-                    <h5 class="contributor">Eva</h5>
-                    <h5 class="contributor">Ina</h5>
-                    <h5 class="contributor">Siem</h5>
-                    <h5 class="contributor">Daniel</h5>
-                  </div>
+              <footer class="footer">
+                <div class="footer-resources">
+                  <a href="resources.html">References</a>
                 </div>
+                <div class="footer-team">
+                  <a href="team.html">Team members</a>
+                </div>
+                  <div class="logo">
+                  <img src="images/HCicon.PNG" alt="Logo" height="70" width="auto">
+                  </div>
+
               </footer>
             </body>
             </html>
