--- a/team.html
+++ b/team.html
@@ -51,7 +51,7 @@
       <a href="team.html">Team members</a>
     </div>
       <div class="logo">
-      <img src="images/HCicon.PNG" alt="Logo" height="70" width="auto">
+      <img src="images/logowhite.png" alt="Logo" height="70" width="auto">
       </div>
 
   </footer>
