--- a/resources.html
+++ b/resources.html
@@ -62,18 +62,19 @@
         <br><br> Used with licence <br><br>
     </li>
 
-      <li><a href="?" target="_blank">Crowd Image on Front Page <img src="images/link.png" alt="link" width="15" height="auto"></a>
+      <li><a href="https://stock.adobe.com/no/collections/rnfZN919Z5DzUHhSdoBuCqP2sBrLoehV?asset_id=329654183" target="_blank">Crowd Image on Front Page <img src="images/link.png" alt="link" width="15" height="auto"></a>
       <br><br> Image preview:
       <br><img src="images/crowd.png" alt"" width="100" height="auto">
-      <br><br> Artist: ?
-      <br><br> Date accessed: ?
+      <br><br> Artist: Angelina Bambina
+      <br><br> Date accessed: 19/11/2020
     </li>
 
-    <li><a href="?" target="_blank"> Arrow Image on Front Page  <img src="images/link.png" alt="link" width="15" height="auto"></a>
+    <li><a href="https://iconmonstr.com/arrow-65-svg/" target="_blank"> Arrow Image on Front Page  <img src="images/link.png" alt="link" width="15" height="auto"></a>
     <br><br> Image preview:
     <br> <img src="images/arrow-down.png" alt="" width="100" height="auto">
-    <br><br> Artist: ?
-    <br><br> Date accessed: ?
+    <br><br> Artist: Alexander Kahlkopf
+    <br><br> Date accessed: 19/11/2020
+    <br><br> Image has been altred in Adobe Photoshop too change color<br><br>
   </li>
 
   <li><a href="https://www.un.org/sustainabledevelopment/health/" target="_blank"> UN goal 3 on Front Page and Challenge Page  <img src="images/link.png" alt="link" width="15" height="auto"></a>
