CSS og Responsiv endringer på prototype siden

--- a/team.html
+++ b/team.html
@@ -33,8 +33,8 @@
         <li> <b> Daniel Hop Hansen </b>
             <br><br> Studentnummer: <br><br>
 
-        <li> <b> Siem Fitwi </b>
-          <br><br> Studentnummer: <br><br>
+        <li> <b> Siem Fitwi Fissuh</b>
+          <br><br> Studentnummer: s351913<br><br>
 
         <li> <b> Zandra Max </b>
           <br><br> Studentnummer: <br><br>
