--- a/resources.html
+++ b/resources.html
@@ -55,7 +55,7 @@
 
         <li><a href="https://stock.adobe.com/no/images/social-distancing-keep-distance-in-public-society-people-to-protect-from-covid-19-coronavirus-outbreak-spreading-concept-businessman-and-woman-keep-distance-away-in-the-meeting-with-virus-pathogens/330511344?prev_url=detail" target="_blank">Distancing image on front page <img src="images/link.png" alt="link" width="15" height="auto"></a>
         <br><br> Image preview:
-        <br><img src="images/forsidebilde.png" alt"" width="100" height="auto">
+        <br><img src="images/forsidebilde.png" alt"man and woman drawing circles to keep distance" width="100" height="auto">
         <br><br> Artist: Nuthawut
         <br><br> Date accessed: 17/11/2020
         <br><br> The original picture has been altered by removing the background in Adobe PS
@@ -64,14 +64,14 @@
 
       <li><a href="https://stock.adobe.com/no/collections/rnfZN919Z5DzUHhSdoBuCqP2sBrLoehV?asset_id=329654183" target="_blank">Crowd Image on Front Page <img src="images/link.png" alt="link" width="15" height="auto"></a>
       <br><br> Image preview:
-      <br><img src="images/crowd.png" alt"" width="100" height="auto">
+      <br><img src="images/crowd.png" alt"crowd with masks" width="100" height="auto">
       <br><br> Artist: Angelina Bambina
       <br><br> Date accessed: 19/11/2020
     </li>
 
     <li><a href="https://iconmonstr.com/arrow-65-svg/" target="_blank"> Arrow Image on Front Page  <img src="images/link.png" alt="link" width="15" height="auto"></a>
     <br><br> Image preview:
-    <br> <img src="images/arrow-down.png" alt="" width="100" height="auto">
+    <br> <img src="images/arrow-down.png" alt="arrow" width="100" height="auto">
     <br><br> Artist: Alexander Kahlkopf
     <br><br> Date accessed: 19/11/2020
     <br><br> Image has been altred in Adobe Photoshop too change color<br><br>
@@ -79,7 +79,7 @@
 
   <li><a href="https://www.un.org/sustainabledevelopment/health/" target="_blank"> UN goal 3 on Front Page and Challenge Page  <img src="images/link.png" alt="link" width="15" height="auto"></a>
   <br><br> Image preview:
-  <br> <img src="images/goal_3.png" alt="" width="100" height="auto">
+  <br> <img src="images/goal_3.png" alt="UN goal 3" width="100" height="auto">
   <br><br> Organization: UN
   <br><br> Date accessed: 17/11/2020
   <br><br> Image has been altred in Adobe Photoshop change color and removing backround<br><br>
@@ -94,7 +94,7 @@
 
       <li><a href="https://pixabay.com/no/illustrations/butikk-bygninger-city-arkitektur-5052229/" target="_blank"> House illustration on Challenge Site   <img src="images/link.png" alt="link" width="15" height="auto"></a>
       <br><br> Image preview:
-      <br> <img src="images/maximum.png" alt="" width="100" height="auto">
+      <br> <img src="images/maximum.png" alt="shop with sign" width="100" height="auto">
       <br><br> Artist: Stephanie Curry
       <br><br> Date accessed: 17/11/2020
       <br><br> Image has been altered in Adobe Photoshop cropping and adding text<br><br>
@@ -135,7 +135,7 @@
 
     <li> <b> Prototype Illustations on Prototype Page </b>
     <br><br> Image preview:
-    <br><img src="images/prototype/Bilde2.png" alt"logo" width="100" height="auto">
+    <br><img src="images/prototype/Bilde2.png" alt"prototype" width="100" height="auto">
     <br><br> The prototype is a composite image created in ??????
     <br><br> Link til icon hvis du ikke har laget selv? <br><br>
 
