--- a/team.html
+++ b/team.html
@@ -34,7 +34,7 @@
             <br><br> Studentnummer: <br><br>
 
         <li> <b> Siem Fitwi Fissuh</b>
-          <br><br> Studentnummer: s351913<br><br>
+          <br><br> Studentnummer: S351913<br><br>
 
         <li> <b> Zandra Max </b>
           <br><br> Studentnummer: <br><br>
