Prototype siden er nå Responsive

--- a/prototype.html
+++ b/prototype.html
@@ -49,7 +49,7 @@
             </p>
         </div>
         <div class="app_img wrapper_left">
-            <img src="images/prototype/green.png">
+            <img class="tablet_img" src="images/prototype/green.png">
         </div>
     </section>
     <section class="prototype wrapper_dark darkDiv">
