Responisve endringer på prototype siden

--- a/prototype.html
+++ b/prototype.html
@@ -26,7 +26,7 @@
                 The HowCrowded provides a dual solution for people and organizations to make social distancing a breeze.<br>
             </h1>
     </div>
-    <section class="prototype wrapper_light">
+    <section class="prototype">
         <div class="app_txt wrapper_left">
             <h1>Sensors </h1>
             <p>
@@ -39,7 +39,7 @@
             <img src="images/prototype/sensor.png">
         </div>
     </section>
-    <section class="prototype wrapper_light">
+    <section class="prototype">
         <div class="app_txt wrapper_right">
             <h1> Signs at entrance </h1>
             <p>
@@ -52,9 +52,12 @@
             <img class="tablet_img" src="images/prototype/green.png">
         </div>
     </section>
-    <section class="prototype wrapper_dark darkDiv">
-      <h1 class="divices_txt"> The App Explained </h1>
-      <div class="app_txt wrapper_left">
+    <section class="prototype darkDiv">
+        <h1 class="divices_txt"> The App Explained </h1>
+        <div class="app_img wrapper_right">
+            <img src="images/prototype/Home_page.png">
+        </div>
+        <div class="app_txt wrapper_left">
           <h1>The homepage</h1>
           <p>
               When opening the app, you have multiple ways to choose the public place you want
@@ -64,11 +67,8 @@
               You will also have the possibility to save your favourite places for future use.
           </p>
       </div>
-      <div class="app_img wrapper_right">
-          <img src="images/prototype/Home_page.png">
-      </div>
     </section>
-    <section class="prototype wrapper_dark darkDiv">
+    <section class="prototype darkDiv">
         <div class="app_img wrapper_left">
             <img src="images/prototype/2Home_Search.png">
         </div>
@@ -82,7 +82,7 @@
             </p>
         </div>
     </section>
-    <section class="prototype wrapper_dark darkDiv">
+    <section class="prototype darkDiv">
         <div class="app_txt wrapper_left">
             <h1>Public place information</h1>
             <p>
@@ -97,7 +97,7 @@
             <img src="images/prototype/3Home_Store_INFO.png">
         </div>
     </section>
-    <section class="prototype wrapper_light">
+    <section class="prototype">
       <h1 class="divices_txt"> Other App Features </h1>
         <div class="app_img wrapper_left">
             <img class="app_img" src="images/prototype/4My%20Stores.png">
@@ -110,7 +110,7 @@
             </p>
         </div>
     </section>
-    <section class="prototype wrapper_light">
+    <section class="prototype">
         <div class="app_txt wrapper_left">
             <h1>Privacy, settings and more</h1>
             <p> The App provides an easy way to change to your preferred settings</p>
